@@ -1,3 +1,7 @@
+2008-11-14  Gabor Csardi  <csardi@szaffi>
+
+	* src/bipartite.c (igraph_is_bipartite) : added
+
 2008-11-02  Gabor Csardi  <csardi@szaffi>
 
 	* src/bipartite.c (igraph_get_incidence) : rewritten, previous 
